--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-11 17:39:34 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-12 00:46:20 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@mastersthesis{thesismelch,
+	Author = {D. Melchionni},
+	Date-Added = {2015-11-11 22:26:12 +0000},
+	Date-Modified = {2015-11-11 22:26:53 +0000},
+	School = {Politecnico di Milano},
+	Title = {Vibrometro laser retroazionato in digitale},
+	Year = {2012}}
+
+@phdthesis{randonethesis,
+	Author = {E. M. Randone},
+	Date-Added = {2015-11-11 21:28:32 +0000},
+	Date-Modified = {2015-11-11 21:29:57 +0000},
+	School = {Universit{\`a} Degli Studi di Pavia},
+	Title = {Fenomeni di retro-iniezione ottica in laser a semiconduttore e applicazioni},
+	Year = {2007}}
 
 @article{1070479,
 	Author = {Lang, R. and Kobayashi, K.},
